# spotify_api_tests

./: .env.example  README.md  config.py  conftest.py  pyproject.toml  tests_spotify_app.py
spotify_api_tests/: app.py
spotify_api_tests/data/: artists.py  tracks.py
spotify_api_tests/model/: spotify.py  spotify_playlist.py  spotify_user.py
spotify_api_tests/schemas/: get_favorite_tracks.json  get_followed_artists.json  get_no_favorite_tracks.json  get_no_followed_artists.json  get_no_tracks_in_playlist.json  get_top_artists.json  get_tracks_in_playlist.json  get_user_info.json  post_create_playlist.json  post_delete_track_from_playlist.json
spotify_api_tests/utils/: helpers.py
spotify_api_tests/utils/notification/: telegram.json
tests/: conftest.py  test_spotify_app.py
